syntax = "proto3";

package bcbpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/bcbpb";

import "mir/plugin.proto";

// ============================================================
// Messages
// ============================================================

message BroadcastRequest {
  bytes data = 1;
}

message Deliver {
  bytes data = 1;
}

message Event {
  oneof type {
    option (mir.event_type) = true;
    BroadcastRequest request = 1;
    Deliver          deliver = 2;
  }
}

message Message {
  oneof type {
    StartMessage start_message = 1;
    EchoMessage  echo_message  = 2;
    FinalMessage final_message = 3;
  }
}

message StartMessage {
  bytes data = 1;
}

message EchoMessage {
  bytes signature = 1;
}

message FinalMessage {
  bytes data = 1;
  repeated string signers = 2;
  repeated bytes signatures = 3;
}
